Fix hero image on mobile

--- a/components/hero/hero.module.scss
+++ b/components/hero/hero.module.scss
@@ -44,7 +44,7 @@
 
     h1 {
       font: 400 96px 'Prata', sans-serif;
-      margin-bottom: 0px;
+      margin: 0px;
 
       @include lg {
         font-size: 60px;
