--- a/shared/layout/layout.module.scss
+++ b/shared/layout/layout.module.scss
@@ -4,7 +4,7 @@
   max-width: 1400px;
   margin: 0 auto;
 
-  @include md {
+  @include xl {
     margin: 0 20px;
   }
 }
